﻿A changelog for recent builds as pasted into the sourceforge page.

Generally created by hand after running:
   hg log -rb2xx: > log.out
However contributors are encouraged to add their own entries for their work.

Note that build 228 was the last version supporting Python 2.

Since build 300:
----------------
* Fix a bug in `win32profile.GetEnvironmentStrings()` relating to environment
  variables with an equals sign (@maxim-krikun in #1661)

* Fixed a bug where certain COM dates would fail to be converted to a Python
  datetime object with `ValueError: microsecond must be in 0..999999`. Shoutout
  to @hujiaxing for reporting and helping reproduce the issue (#1655)

* Added win32com.shell.SHGetKnownFolderPath() and related constants.

* Shifted work in win32.lib.pywin32_bootstrap to Python's import system from
  manual path manipulations (@wkschwartz in #1651)

* Fixed a bug where win32print.DeviceCapabilities would return strings
  containing the null character followed by junk characters.
  (#1654, #1660, Lincoln Puzey)

* Add wrap and unwrap operations defined in the GSSAPI to the sspi module
  and enhance the examples given in this module.
  (#1692, Emmanuel Coirier)

Since build 228:
----------------
* Fixed a bug where win32com.client.VARIANT params were returned in the reverse
  order. This only happened when win32com.client.VARIANT was explicitly used
  (ie, not when normal params were passed) For example:
  ```python
      arg1 = VARIANT(pythoncom.VT_R4 | pythoncom.VT_BYREF, 2.0)
      arg2 = VARIANT(pythoncom.VT_BOOL | pythoncom.VT_BYREF, True)
      object.SomeFunction(arg1, arg2)
  ```
  after this call, `arg1.value` was actually the value for `arg2`, and
  vice-versa (#1303, #622).

* Fixed a bug that Pythonwin had an empty `sys.argv` (@kxrob in #1607)

* Fixed a bug that prevented win32process.ReadProcessMemory() from working
  in all scenarios (#1599)

* Changed how Services implemented with win32serviceutil.ServiceFramework