@@ -8,6 +8,11 @@ Note that build 228 was the last version supporting Python 2.
 
 Since build 300:
 ----------------
+* Fix some confusion on how dynamic COM object properties work. The old
+  code was confused, so there's a chance there will be some subtle
+  regression here - please open a bug if you find anything, but this
+  should fix #1427.
+
 * Fix a bug in `win32profile.GetEnvironmentStrings()` relating to environment
   variables with an equals sign (@maxim-krikun in #1661)
 
